Partial fix for cut text in reader when in horizontal scrolling

--- a/src/components/ln-chapter-reader/ln-chapter-reader.scss
+++ b/src/components/ln-chapter-reader/ln-chapter-reader.scss
@@ -14,7 +14,7 @@ ln-chapter-reader {
         .slide-zoom {
             text-align: start;
             & span {
-                line-height: 1.7;
+                line-height: 1;
             }
         }
     }
@@ -26,7 +26,7 @@ ln-chapter-reader {
         }
     }
     & .vertical-content {
-        line-height: 1.7;
+        line-height: 1.5;
         font-family: RobotoSlabRegular;
     }
     & .navigation {
@@ -41,8 +41,5 @@ ln-chapter-reader {
     }
     & .navigation-next {
         right: 0;
-    }
-    & br {
-        line-height: 2.5;
     }
 }
